[package]
name = "ct-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22.0", features = ["std"] }
json = "0.12.4"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
